=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.x CA
 - Removed Tab page content "shift" to left when pinning Navigator (windmillway)
 - "Narrowed" Tab spacing, and Tab title padding, on themes simplygreen, xenea, and wood (windmillway)
 - Made static tab "pinnable" (yalnifj)
 - Changed: Fixed return to correct Tab after using lightbox configuration function from Album Tab Page (windmillway)
 - Merged: Merge changes r6304 - r6324 from the trunk. (windmillway)
 - Merged: Merge changes r6237 - r6303 from the trunk. (windmillway)
 - Changed: Removed Album tab thumbnail dropdown menu items "Manage links" and "Unlink Media" for editors. These are Admin functions only. (windmillway)
 - Fixed: Various bugs with Tab Management (yalnifj)
 - Merged: Merge changes r6205 - r6236 from the trunk. (windmillway)
 - Modified: Admin Page "Module Administration Tab" link. Tidied up Lightbox config return button links. (windmillway)
 - Fixed: Problem with Admin page. Added Lightbox to Module Administration Settings page. Minor css adjustments to Simplyxxx themes. (windmillway)
 - Merged: Merge changes r6120 - r6204 from the trunk. (windmillway)
 - Modified: Theme css relocation for all Tab management (jquery-ui) theme css files (windmillway) 
 - Added: Manage Links to Thumbnail drop Down Menu on Album Page (windmillway)
 - Modified theme css files for tab management (windmillway)
 - Merged: Merge changes r6095 - r6119 from the trunk. (windmillway)
 - Added FamilySearch module (yalnifj)
 - Moved new_indi to now be the main indi page. (yalnifj)
 - Merged: Merge changes r6086 - r6094 from the trunk. (windmillway)
 - Changed: Removed some css colour inline items not required (windmillway)
 - Changed: Fixed a few bugs in Census column hide/show algorithms (windmillway) 